--- a/ePro/ePro.csproj
+++ b/ePro/ePro.csproj
@@ -186,9 +186,11 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductCompliance.cs" />
     <Compile Include="Models\ProductListing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AssignedComplianceData.cs" />
     <Compile Include="ViewModels\AssignedComplianceFormData.cs" />
     <Compile Include="ViewModels\ComplianceDateGroup.cs" />
     <Compile Include="ViewModels\ProductIndexData.cs" />
